fix: adjust modal footer z-index

--- a/web/styles/projects-modal.css
+++ b/web/styles/projects-modal.css
@@ -88,68 +88,6 @@ main.blur {
 /* ------------------------------------------------------------------------------------- */
 /*                                      PROJECTS                                         */
 /* ------------------------------------------------------------------------------------- */
-.project-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-}
-
-.project-header h4 {
-    margin: 12px;
-}
-
-.project-details {
-    padding-bottom: 0;
-
-    img {
-        border-radius: 10px;
-        align-items: center;
-    }
-
-    p {
-        margin-top: 0px;
-    }
-
-    h5 {
-        margin-bottom: 5px;
-    }
-}
-
-.project-tech {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 11px;
-
-    div,
-    img {
-        width: 28px;
-        height: 28px;
-        padding: 0px;
-        border-radius: 0px;
-    }
-}
-
-.project-links {
-    margin: 0px;
-
-    a {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 11px;
-        text-decoration: underline;
-        margin: 5px;
-
-        font-size: 21px;
-    }
-
-    h6 {
-        margin: 0px;
-    }
-}
-
 .detail-header {
     margin-bottom: 24px;
     display: flex;
@@ -254,6 +192,8 @@ footer {
     backdrop-filter: blur(3px);
 
     border-radius: 12px;
+
+    z-index: 2;
 }
 
 .cta-actions {
